# CodingChallenge-ML-API

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-cloudrun-by-artifact-registry.yml  deploy-cloudrun-by-docker-registry.yml
.github/workflows/deploy-cloudrun-by-artifact-registry/: main.yml
.github/workflows/deploy-cloudrun-by-docker-registry/: main.yml
src/: .env
src/app/api/v1/: __init__.py  health_check.py  ml_model.py
src/app/core/: config.py  setup.py
src/app/core/worker/: functions.py
src/app/resources/: load.py
src/app/resources/serialized_models/v1/: model.joblib  sc.joblib
src/app/schemas/: ml_model.py
src/scripts/Python challenge/: codingChallengeDescription.docx  notebook.ipynb
tests/api/routes/: test_health_check.py  test_predict.py
tests/utils/: predict.py
