[tool.poetry]
name = "codingchallenge-ml-api"
version = "0.1.0"
description = ""
authors = ["Makson Vinicio <maksonvinicio7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standart"], version = "^0.110.2"}
pytest = "^8.1.1"
gunicorn = "^22.0.0"
pydantic-settings = "^2.2.1"
uvicorn = "^0.29.0"
joblib = "^1.4.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pandas = "^2.2.2"
numpy = "^1.26.4"
ipykernel = "^6.29.4"
joblib = "^1.4.0"
uvicorn = "^0.29.0"
ruff = "^0.4.1"
httpx = "^0.27.0"
anyio = "^4.3.0"
pytest-asyncio = "^0.23.6"
trio = "^0.25.0"
scikit-learn = "^1.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
